<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/com_facebook_button_background_color_selected"
    tools:context="com.thenewtime.testorfeon.view.LoginActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <!-- Se inicia la vista para el login de la App-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="239dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/user" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_user_id"
                        android:inputType="textWebEmailAddress"
                        android:maxLength="50"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1" />


                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:actionMenuTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimaryDark"
                    android:backgroundTint="@color/com_facebook_blue"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/cardview_light_background"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/email_sign_up_button"
                    style="?android:actionMenuTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:backgroundTint="@color/com_facebook_blue"
                    android:text="@string/action_sign_up"
                    android:textColor="@color/com_facebook_button_background_color_focused"
                    android:textStyle="bold" />


                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="30dp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!-- Termina la vista para el login de la App-->

</FrameLayout>